--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 <body>
     <header>
         <h1>Opinions from my Twittersphere</h1>
+        <p>...as AI generated articles</p>
     </header>
 
     <main>
         <p>- The following "articles" are based on daily use of Twitter over 8 years and over 1,800 bookmarked tweets.<br>
             - I curate relevant bookmarks that have helped form and best represent my opinions on a broad set of subjects I've become interested in over the years.<br>
-            - I use AI to write the articles. The result is linguistically mediocre but gets the job done as the tweets
+            - I use AI to write the "articles". The result is linguistically mediocre but gets the job done as the tweets
             mostly speak for themselves and I am not an avid writer anyway.<br>
             - The tweets are mostly from sources with a good track record. I have followed some of them for multiple years
             and find their takes to be more informed than most of the stuff I read in classic newspapers.</p>
         <nav>
             <ul>
-                <li><a href="european_union_economic_downfall.html">European Union Economic Challenges</a></li>
-                <li><a href="renewables-explosion.html">Renewable Energy Growth</a></li>
+                <li><a href="renewables-explosion.html">Renewables Explosion</a></li>
             </ul>
         </nav>
     </main>
