--- a/index.html
+++ b/index.html
@@ -6,42 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opinions from my Twittersphere</title>
     <style>
-        /* body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        header {
-            background-color: #f4f4f4;
-            padding: 1rem;
-            text-align: center;
-        }
-        nav {
-            margin-top: 1rem;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        nav ul li {
-            margin-bottom: 0.5rem;
-        }
-        a {
-            color: #333;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #0066cc;
-        } */
     </style>
 </head>
 
 <body>
     <header>
         <h1>Opinions from my Twittersphere</h1>
-        <p>...as AI generated articles</p>
     </header>
 
     <main>
@@ -54,6 +24,7 @@
         <nav>
             <ul>
                 <li><a href="renewables-explosion.html">Renewables Explosion</a></li>
+                <li><a href="european_union_downfall.html">EU/Germany is struggling economically</a></li>
             </ul>
         </nav>
     </main>
