--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <p>- The following "articles" are based on daily use of Twitter over 8 years and over 1,800 bookmarked tweets.<br>
-            - I curate relevant bookmarks that have helped form and best represent my opinions on a broad set of subjects I've become interested in over the years.<br>
+            - I curate relevant bookmarks by hand that have helped form and best represent my opinions on a broad set of subjects I've become interested in over the years.<br>
             - I use AI to write the "articles". The result is linguistically mediocre but gets the job done as the tweets
             mostly speak for themselves and I am not an avid writer anyway.<br>
             - The tweets are mostly from sources with a good track record. I have followed some of them for multiple years
