--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </header>
 
     <main>
-        <p>- The following "articles" are based on daily use of Twitter over 8 years and over 1,800 bookmarked tweets.<br>
+        <!-- <p>- The following "articles" are based on daily use of Twitter over 8 years and over 1,800 bookmarked tweets.<br>
             - I curate relevant bookmarks by hand that have helped form and best represent my opinions on a broad set of subjects I've become interested in over the years.<br>
             - I use AI to write the "articles". The result is linguistically mediocre but gets the job done as the tweets
             mostly speak for themselves and I am not an avid writer anyway.<br>
             - The tweets are mostly from sources with a good track record. I have followed some of them for multiple years
-            and find their takes to be more informed than most of the stuff I read in classic newspapers.</p>
+            and find their takes to be more informed than most of the stuff I read in classic newspapers.</p> -->
         <nav>
             <ul>
                 <li><a href="renewables-explosion.html">Renewables Explosion</a></li>
