--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul>
                 <li><a href="renewables-explosion.html">Renewables Explosion</a></li>
                 <li><a href="european_union_downfall.html">EU/Germany is struggling economically</a></li>
+                <li><a href="rise_of_cina.html">The Rise of China</a></li>
             </ul>
         </nav>
     </main>
